--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "moment": "^2.18.1",
     "react": "15.4.2",
     "react-native": "0.41.2",
     "react-native-rest-client": "^0.1.1"
