--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "moment": "^2.18.1",
     "react": "15.4.2",
     "react-native": "0.41.2",
-    "react-native-rest-client": "^0.1.1"
+    "react-native-rest-client": "^0.1.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
