Update face recognization fuctions

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "15.4.2",
     "react-native": "0.41.2",
     "react-native-rest-client": "^0.1.1",
+    "react-native-tab-view": "0.0.70",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
