--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "SmartCar",
-  "version": "0.0.1",
+  "name": "empty-project-template",
+  "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "eject": "expo eject"
   },
   "dependencies": {
+    "expo": "^29.0.0",
+    "react": "16.3.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
     "moment": "^2.18.1",
-    "react": "15.4.2",
-    "react-native": "0.41.2",
     "react-native-rest-client": "^0.1.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
