--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "SmartCar",
+    "name": "ExpoText",
     "description": "This project is really great.",
-    "slug": "SmartCar",
+    "slug": "ExpoText",
     "privacy": "public",
     "sdkVersion": "29.0.0",
     "platforms": ["ios", "android"],
