--- a/package.json
+++ b/package.json
@@ -11,21 +11,6 @@
   "dependencies": {
     "expo": "^29.0.0",
     "react": "16.3.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz",
-    "moment": "^2.18.1",
-    "react-native-rest-client": "^0.1.1",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
-  },
-  "devDependencies": {
-    "babel-jest": "18.0.0",
-    "babel-preset-react-native": "1.9.1",
-    "jest": "^18.1.0",
-    "react-test-renderer": "15.4.2"
-  },
-  "jest": {
-    "preset": "react-native"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-29.0.0.tar.gz"
   }
 }
